Update config.ini to use relative paths

--- a/GNN_NIDS_tensorflow/config.ini
+++ b/GNN_NIDS_tensorflow/config.ini
@@ -1,12 +1,12 @@
 [DIRECTORIES]
 # PATH where the model will be saved/resumed
-logs: /Users/zzhan/Documents/GitHub/GNN-NIDS/GNN_NIDS_tensorflow/model_backups/ml_dataset_model/
+logs: ./model_backups/ml_dataset_model/
 
 # PATH of the train data
-train: /Users/zzhan/Documents/GitHub/GNN-NIDS/GNN_NIDS_tensorflow/preprocessed_ML_dataset/TRAIN/
+train: ./preprocessed_ML_dataset/TRAIN/
 
 #PATH of the validation data
-validation: /Users/zzhan/Documents/GitHub/GNN-NIDS/GNN_NIDS_tensorflow/preprocessed_ML_dataset/EVAL/
+validation: ./preprocessed_ML_dataset/EVAL/
 
 
 [HYPERPARAMETERS]
